--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,13 +6,57 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">Selected Recent Publications <a href="{{https://scholar.google.com/citations?user=rtLHw6QAAAAJ}}">(Full List)</a>.</div>
 {% endif %}
 
-{% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
+- **PEARL: Towards Permutation-Resilient LLMs**
+
+  Liang Chen, Li Shen, Yang Deng, **Xiaoyan Zhao**, Bin Liang, Kam-Fai Wong
+
+  ICLR 2025
+  
+- **Pacar: Automated fact-checking with planning and customized action reasoning using large language models**
+
+  **Xiaoyan Zhao**, Lingzhi Wang, Zhanghao Wang, Hong Cheng, Rui Zhang, Kam-Fai Wong
+
+  COLING 2024 (CCF B)
+
+- **A Comprehensive Survey on Relation Extraction: Recent Advances and New Frontiers**
+
+  **Xiaoyan Zhao**, Yang Deng, Min Yang, Rui Zhang, Hong Cheng, Wai Lam, Ruifeng Xu
+
+  ACM Computing Surveys 2024 (CSUR, JCR Q1)
+
+- **Few-shot Relation Extraction with Automatically Generated Prompts**
+
+  **Xiaoyan Zhao**, Min Yang, Qiang Qu, Ruifeng Xu
+
+  TNNLS 2024 (CCF A)
+
+- **PMG : Personalized Multimodal Response Generation with Large Language Models.** 
+
+  Xiaoteng Shen, Rui Zhang, **Xiaoyan Zhao**, Jieming Zhu, Xi Xiao
+
+  WWW 2024 (CCF A)
+
+- **Exploring Privileged Features for Relation Extraction with Contrastive Student-Teacher Learning**
+
+  **Xiaoyan Zhao**, Min Yang, Qiang Qu, Ruifeng Xu
+
+  TKDE 2022 (CCF A)
+
+- **Improving Neural Chinese Word Segmentation with Lexicon-enhanced Adaptive Attention**
+
+  **Xiaoyan Zhao**, Min Yang, Qiang Qu and Yang Sun
+
+  SIGIR 2020 (short paper, CCF A)
+
+
+<!-- {% include base_path %}
+
+New style rendering if publication categories are defined -->
+<!-- {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
     {% for post in site.publications reversed %}
@@ -30,7 +74,7 @@ author_profile: true
   {% for post in site.publications reversed %}
     {% include archive-single.html %}
   {% endfor %}
-{% endif %}
+{% endif %} 
 
 
 
